# plain-bitnames

./: .gitmodules  Cargo.toml  Dockerfile  README.md  deny.toml  shell.nix
.cargo/: config.toml
.github/workflows/: build_docker.yaml  check_and_lint.yaml  check_lint_build.yaml
.omo/run-continuation/: ses_0d31354b3ffe3FPJ6zqmrkH2ni.json
app/: Cargo.toml  app.rs  cli.rs  main.rs  rpc.rs  rpc_api.rs  rpc_server.rs  uhid.rs
app/gui/: bitname_explorer.rs  block_explorer.rs  console_logs.rs  deposit.rs  encrypt_message.rs  mempool_explorer.rs  miner.rs  mod.rs  my_bitnames.rs  paymail.rs  tx_builder.rs  tx_creator.rs  util.rs  utxo_creator.rs  utxo_selector.rs
app/gui/activity/: bitname_explorer.rs  block_explorer.rs  mempool_explorer.rs  mod.rs
app/gui/bitnames/: all_bitnames.rs  mod.rs  reserve_register.rs
app/gui/coins/: mod.rs  my_bitnames.rs  transfer_receive.rs  tx_builder.rs  tx_creator.rs  utxo_creator.rs  utxo_selector.rs
app/gui/messaging/: decrypt.rs  encrypt.rs  mod.rs
app/gui/parent_chain/: info.rs  transfer.rs
app/gui/paymail/: inbox.rs  mod.rs  settings.rs
app/src/: main.rs
app/src/gui/: block_explorer.rs  mempool_explorer.rs  mod.rs  utxo_selector.rs
app/tests/: regtest.rs
cli/: Cargo.toml  lib.rs  main.rs
integration_tests/: Cargo.toml  README.md  example.env  ibd.rs  integration_test.rs  main.rs  register_bitname.rs  setup.rs  unknown_withdrawal.rs  util.rs
lib/: Cargo.toml  archive.rs  authorization.rs  lib.rs  mempool.rs  miner.rs  net.rs  node.rs  state.rs  util.rs  wallet.rs
lib/net/: error.rs  mod.rs  peer.rs
lib/net/peer/: error.rs  message.rs  mod.rs  request_queue.rs
lib/node/: mod.rs  net_task.rs
lib/src/: lib.rs  mempool.rs  net.rs  node.rs  state.rs  wallet.rs
lib/src/types/: types.rs
lib/state/: bitname_data.rs  bitnames.rs  block.rs  error.rs  mod.rs  rollback.rs  two_way_peg_data.rs
lib/types/: address.rs  bitname_data.rs  bitname_seq_id.rs  constants.rs  hashes.rs  keys.rs  mod.rs  proto.rs  schema.rs  transaction.rs
lib/types/transaction/: mod.rs  output_content.rs
lib/wallet/: error.rs  mod.rs  passkey.rs  sign_in_with_bitnames.rs  util.rs
lib/wallet/sign_in_with_bitnames/: error.rs  mod.rs
rpc-api/: Cargo.toml  lib.rs  schema.rs  test.rs
types/: Cargo.toml  address.rs  authorization.rs  bitname_data.rs  bitname_seq_id.rs  constants.rs  hashes.rs  keys.rs  lib.rs  paymail.rs
types/transaction/: mod.rs  output_content.rs
