[workspace]
resolver = "2"
members = [
    "app",
    "cli",
    "lib",
    "rpc-api",
]

[workspace.package]
authors = [ "Ash Manning <ash@layertwolabs.com>" ]
edition = "2021"
version = "0.7.3"

[workspace.dependencies.bip300301]
git = "https://github.com/Ash-L2L/bip300301.git"
rev = "64568dee7b89fe8c021226f10b17a18fe3386871"

[profile.release]
# lto = "fat"