[workspace]
resolver = "2"
members = ["app", "cli", "integration_tests", "lib", "rpc-api", "types"]

[workspace.package]
authors = [ "Ash Manning <ash@layertwolabs.com>" ]
edition = "2024"
license-file = "LICENSE.txt"
publish = false
version = "0.11.6"

[workspace.dependencies]
anyhow = "1.0.72"
bincode = "1.3.3"
bitcoin = "0.32.5"
blake3 = "1.4.1"
borsh = "1.3.1"
clap = "4.5.4"
ed25519-bip32 = "0.4.1"
ed25519-dalek = "2.1.1"
fallible-iterator = "0.3.0"
futures = { version = "0.3.30", default-features = false }
heed = "0.21.0"
hex = "0.4.3"
http = "1.2.0"
jsonrpsee = { version = "0.25.1", features = ["tracing"] }
nonempty = "0.11.0"
parking_lot = "0.12.1"
prost = "0.13.3"
rayon = "1.7.0"
semver = "1.0.25"
serde = "1.0.179"
serde_json = "1.0.113"
serde_with = { version = "3.4.0", default-features = false }
strum = { version = "0.26.3", default-features = false }
thiserror = "=2.0.16"
tiny-bip39 = "2.0.0"
tokio = { version = "1.48.0", default-features = false }
tokio-util = "0.7.18"
tonic = "0.12.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.20"
url = "2.5.4"
utoipa = { version = "5.2.0", default-features = false }
uuid = "1.13.1"
x25519-dalek = "2.0.0"

[workspace.dependencies.bip300301_enforcer_lib]
default-features = false
git = "https://github.com/LayerTwo-Labs/bip300301_enforcer"
rev = "94bc123e0b26af9c18d10c933803d53af62f034c"

[workspace.dependencies.bip300301_enforcer_integration_tests]
default-features = false
git = "https://github.com/LayerTwo-Labs/bip300301_enforcer"
rev = "94bc123e0b26af9c18d10c933803d53af62f034c"

[workspace.dependencies.l2l-openapi]
git = "https://github.com/Ash-L2L/l2l-openapi"
rev = "5f8fb2237c95725731d5fb10542098303d82e215"

[workspace.dependencies.libes]
version = "0.9.1"
features = ["AES256-GCM", "ECIES-MAC", "HMAC-SHA256", "x25519"]

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
assertions_on_result_states = "allow"
let_unit_value = "allow"
print_stderr = "deny"
print_stdout = "deny"
significant_drop_in_scrutinee = "deny"
wildcard_imports = "deny"

[workspace.lints.rust]
let_underscore_drop = "deny"

# temp-dir does not leak correctly after clone
# https://gitlab.com/leonhard-llc/ops/-/issues/17
[patch.crates-io.temp-dir]
git = "https://gitlab.com/A-Manning/leonhard-llc-ops.git"
branch = "temp-dir-leak"

# Have to use a patch here. Depending directly on the fork breaks macros.
[patch.crates-io.tracing-appender]
git = "https://github.com/torkelrogstad/tokio-tracing.git"
branch = "log-rotation-size"

[profile.release]
# lto = "fat"