[package]
name = "plain_bitnames_app"
authors.workspace = true
edition.workspace = true
license-file.workspace = true
publish.workspace = true
version.workspace = true

[dev-dependencies]
base64 = "0.22.1"
futures = { version = "0.3.30", default-features = false }
jsonrpsee = { version = "0.24.7", features = ["async-client", "http-client"] }
tempfile = "3.10.0"
test-log = { version = "0.2.14", features = ["trace"] }
tokio = { version = "1.29.1", features = ["process", "rt-multi-thread"] }

[dev-dependencies.bip300301]
git = "https://github.com/Ash-L2L/bip300301.git"
rev = "45f74e37b8295207d29ddbbce10d563ec9f67151"
features = ["tracing"]

[dependencies]
anyhow = { version = "1.0.72", features = ["backtrace"] }
bincode = "1.3.3"
bitcoin = { version = "0.32.2", features = ["serde"] }
blake3 = "1.4.1"
borsh = "1.3.0"
clap = { version = "4.5.4", features = ["derive"] }
ctrlc = "3.4.0"
dirs = "6.0.0"
eframe = "0.30.0"
either = "1.13.0"
futures = "0.3.30"
hex = "0.4.3"
human-size = "0.4.3"
itertools = "0.14.0"
include_path = "0.1.1"
jsonrpsee = { version = "0.24.7", features = ["server"] }
parking_lot = "0.12.1"
plain_bitnames = { path = "../lib", features = ["clap"] }
plain_bitnames_app_cli = { path = "../cli" }
plain_bitnames_app_rpc_api = { path = "../rpc-api" }
poll-promise = { version = "0.3.0", features = ["tokio"] }
serde = { version = "1.0.179", features = ["derive"] }
shlex = "1.3.0"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "2.0.10"
tiny-bip39 = "2.0.0"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.10", features = ["rt"] }
tonic = "0.12.3"
tonic-health = "0.12.3"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
utoipa = "5.2.0"

[dependencies.libes]
version = "0.9.1"
features = ["AES256-GCM", "ECIES-MAC", "HMAC-SHA256", "x25519"]

[features]
default = ["zmq"]
zmq = ["plain_bitnames/zmq"]

[[bin]]
name = "plain_bitnames_app"
path = "main.rs"
