[package]
name = "plain_bitnames_app"
authors.workspace = true
edition.workspace = true
license-file.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
bitcoin = { workspace = true, features = ["serde"] }
blake3 = { workspace = true }
borsh = { workspace = true }
clap = { workspace = true, features = ["derive"] }
dirs = "6.0.0"
eframe = "0.31.0"
either = "1.13.0"
futures = { workspace = true }
hex = { workspace = true }
http = { workspace = true }
human-size = "0.4.3"
itertools = "0.14.0"
include_path = "0.1.1"
jsonrpsee = { workspace = true, features = ["server"] }
mimalloc = { version = "0.1.48", features = ["v3"] }
parking_lot = { workspace = true }
plain_bitnames = { path = "../lib", features = ["clap"] }
plain_bitnames_app_cli = { path = "../cli" }
plain_bitnames_app_rpc_api = { path = "../rpc-api" }
poll-promise = { version = "0.3.0", features = ["tokio"] }
serde = { workspace = true, features = ["derive"] }
shlex = "1.3.0"
strum = {  workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tiny-bip39 = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tokio-util = { workspace = true, features = ["rt"] }
tonic = { workspace = true }
tonic-health = "0.12.3"
# needs to line up with jsonrpsee tower version...
tower = "0.4.13"
tower-http = { version = "0.6.2", features = ["request-id", "trace"] }
tracing = { workspace = true }
tracing-appender = "0.2.3"
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
url = { workspace = true }
utoipa = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[dependencies.libes]
version = "0.9.1"
features = ["AES256-GCM", "ECIES-MAC", "HMAC-SHA256", "x25519"]

[features]
default = ["zmq"]
zmq = ["plain_bitnames/zmq"]

[lints]
workspace = true

[[bin]]
name = "plain_bitnames_app"
path = "main.rs"
