[package]
name = "plain_bitnames_app_cli"
authors.workspace = true
edition.workspace = true
license-file.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.72"
bitcoin = { version = "0.32.2", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
jsonrpsee = { version = "0.24.7", features = ["http-client"] }
plain_bitnames = { path = "../lib" }
plain_bitnames_app_rpc_api = { path = "../rpc-api" }
serde_json = "1.0.113"
tokio = "1.29.1"
utoipa = "5.2.0"

[lib]
name = "plain_bitnames_app_cli_lib"
path = "lib.rs"

[[bin]]
name = "plain_bitnames_app_cli"
path = "main.rs"