[package]
name = "plain_bitnames_app_cli"
authors.workspace = true
edition.workspace = true
license-file.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
bitcoin = { workspace = true, features = ["serde"] }
blake3 = { workspace = true }
clap = { workspace = true, features = ["derive"] }
http = { workspace = true }
jsonrpsee = { workspace = true, features = ["http-client"] }
plain_bitnames = { path = "../lib", features = ["clap"] }
plain_bitnames_app_rpc_api = { path = "../rpc-api" }
serde_json = { workspace = true }
serde_json_canonicalizer = "0.3.0"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
utoipa = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[lints]
workspace = true

[lib]
name = "plain_bitnames_app_cli_lib"
path = "lib.rs"

[[bin]]
name = "plain_bitnames_app_cli"
path = "main.rs"
