[package]
name = "plain_bitnames"
authors.workspace = true
edition.workspace = true
license-file.workspace = true
publish.workspace = true
version.workspace = true

[build-dependencies]
prost = { workspace = true }
prost-build = "0.13.3"
protox = "0.7.1"
tonic-build = "0.12.3"

[dependencies]
addr = "0.15.6"
anyhow = { workspace = true, features = ["backtrace"] }
async-lock = "3.4.0"
bech32 = "0.11.0"
bincode = { workspace = true }
bitcoin = { workspace = true, features = ["serde"] }
blake3 = { workspace = true }
borsh = { workspace = true, features = ["derive"] }
byteorder = "1.4.3"
bytes = "1.9.0"
clap = { workspace = true, features = ["derive"], optional = true }
ed25519-dalek = { version = "2.1.1", features = ["batch", "serde"] }
fallible-iterator = "0.3.0"
fatality = "0.1.1"
futures = { workspace = true }
hashlink = { version = "0.10.0", features = ["serde_impl"] }
heed = "0.21.0"
hex = { workspace = true, features = ["serde"] }
hex-literal = "0.4.1"
jsonrpsee = { workspace = true }
libes = { workspace = true }
merkle-cbt = "0.3.2"
nonempty = { version = "0.11.0", features = ["serialize"] }
parking_lot = { workspace = true }
prost = { workspace = true }
prost-types = "0.13.3"
quinn = "0.11.6"
rayon = "1.7.0"
rcgen = "0.13.2"
rustls = { version = "0.23.21", default-features = false, features = ["ring"] }
semver = { version = "1.0.25", features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = {  workspace = true }
sneed = { version = "0.0.11", features = ["observe"] }
strum = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tiny-bip39 = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1.15", features = ["sync"] }
tokio-util = { workspace = true, features = ["rt"] }
tonic = { workspace = true }
tracing = { workspace = true }
transitive = "1.0.1"
utoipa = { workspace = true, features = ["macros", "non_strict_integers"] }
x25519-dalek = { version = "2.0.0", features = ["serde", "static_secrets"] }
zeromq = { version = "0.4.1", optional = true }

[features]
clap = ["dep:clap"]
zmq = ["dep:zeromq"]

[dependencies.educe]
version = "0.6.0"
default-features = false
features = ["Clone", "Debug"]


[dependencies.governor]
version = "0.8.1"
default-features = false
features = ["quanta", "std"]

[lints]
workspace = true

[lib]
name = "plain_bitnames"
path = "lib.rs"
