[package]
name = "plain_bitnames"
authors.workspace = true
edition.workspace = true
license-file.workspace = true
publish.workspace = true
version.workspace = true

[build-dependencies]
prost = { workspace = true }
prost-build = { workspace = true }
protox = { workspace = true }
tonic-prost-build = { workspace = true }

[dependencies]
addr = { workspace = true }
anyhow = { workspace = true, features = ["backtrace"] }
async-lock = { workspace = true }
bech32 = { workspace = true }
bincode = { workspace = true }
bitcoin = { workspace = true, features = ["serde"] }
blake3 = { workspace = true }
borsh = { workspace = true, features = ["derive"] }
byteorder = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true, features = ["derive"], optional = true }
ed25519-bip32 = { workspace = true }
ed25519-dalek = { workspace = true, features = ["hazmat"]}
educe = { workspace = true, features = ["Clone", "Debug"] }
error-fatality = { workspace = true }
fallible-iterator = { workspace = true }
futures = { workspace = true, features = ["alloc"] }
governor = { workspace = true, features = ["quanta", "std"] }
hashlink = { workspace = true, features = ["serde_impl"] }
heed = { workspace = true }
hex = { workspace = true, features = ["serde"] }
jsonrpsee = { workspace = true }
nonempty = { workspace = true, features = ["serialize"] }
parking_lot = { workspace = true }
plain_bitnames_types = { path = "../types", features = ["heed"] }
prost = { workspace = true }
prost-types = { workspace = true }
quinn = { workspace = true }
rayon = { workspace = true }
rcgen = { workspace = true }
rustls = { workspace = true, default-features = false, features = ["ring"] }
semver = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true, features = ["alloc", "macros"] }
sneed = { workspace = true, features = ["observe"] }
strum = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tiny-bip39 = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync"] }
tokio-stream = { workspace = true, features = ["sync"] }
tokio-util = { workspace = true, features = ["rt"] }
tonic = { workspace = true }
tonic-prost = { workspace = true }
tracing = { workspace = true }
transitive = { workspace = true }
utoipa = { workspace = true, features = ["macros", "non_strict_integers"] }
x25519-dalek = { workspace = true, features = ["static_secrets"] }
zeromq = { workspace = true, optional = true }

[dependencies.libes]
workspace = true
features = ["AES256-GCM", "ECIES-MAC", "HMAC-SHA256", "x25519"]

[features]
clap = ["dep:clap", "plain_bitnames_types/clap"]
zmq = ["dep:zeromq"]

[lints]
workspace = true

[lib]
name = "plain_bitnames"
path = "lib.rs"
