[package]
name = "plain_bitnames_app_rpc_api"
authors.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
bip300301.workspace = true
jsonrpsee = { version = "0.20.0", features = ["macros"] }
plain_bitnames = { path = "../lib" }
serde = { version = "1.0.179", features = ["derive"] }
utoipa = "4.2.3"

[dependencies.l2l-openapi]
git = "https://github.com/Ash-L2L/l2l-openapi"
rev = "6e440bb2715ec0d495050e9dbbda3f1590a07385"

[lib]
name = "plain_bitnames_app_rpc_api"
path = "lib.rs"