[package]
name = "plain_bitnames_app_rpc_api"
authors.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
bitcoin = { version = "0.32.2", features = ["serde"] }
jsonrpsee = { version = "0.23.2", features = ["client", "macros", "server"] }
plain_bitnames = { path = "../lib" }
serde = { version = "1.0.179", features = ["derive"] }
serde_json = "1.0.113"
utoipa = "5.2.0"

[dependencies.l2l-openapi]
git = "https://github.com/Ash-L2L/l2l-openapi"
rev = "a3e84daa19fd7c1121346984c3ef85304a144792"

[dev-dependencies]
anyhow = "1.0.72"

[lib]
name = "plain_bitnames_app_rpc_api"
path = "lib.rs"