[package]
name = "plain_bitnames_app_rpc_api"
authors.workspace = true
edition.workspace = true
license-file.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
bitcoin = { workspace = true, features = ["serde"] }
jsonrpsee = { workspace = true, features = ["client", "macros", "server"] }
l2l-openapi = { workspace = true }
plain_bitnames = { path = "../lib" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true, features = ["hex", "macros"] }
utoipa = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }

[lints]
workspace = true

[lib]
name = "plain_bitnames_app_rpc_api"
path = "lib.rs"