[package]
name = "plain_bitnames_types"
authors.workspace = true
edition.workspace = true
license-file.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
bech32 = "0.11.0"
bincode = { workspace = true }
bitcoin = { workspace = true, features = ["serde"] }
blake3 = { workspace = true }
borsh = { workspace = true, features = ["derive"] }
clap = { workspace = true, features = ["derive"], optional = true }
ed25519-bip32 = { workspace = true }
generic-array = "1.3.3"
heed = { workspace = true, optional = true }
hex = { workspace = true, features = ["serde"] }
hex-literal = "0.4.1"
libes = { workspace = true }
merkle-cbt = "0.3.2"
nonempty = { workspace = true, features = ["serialize"] }
rayon = { workspace = true }
semver = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = {  workspace = true }
serde_with = {  workspace = true, features = ["hex", "macros"] }
smallvec = { version = "1.13.2", features = ["write"] }
strum = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
typenum = "1.18.0"
utoipa = { workspace = true, features = ["macros", "non_strict_integers"] }
x25519-dalek = { workspace = true, features = ["serde"] }

[dependencies.ed25519-dalek]
workspace = true
features = ["batch", "digest", "hazmat", "serde"]

[dependencies.educe]
version = "0.6.0"
default-features = false
features = ["Clone", "Debug"]

[features]
clap = ["dep:clap"]
heed = ["dep:heed"]

[lints]
workspace = true

[lib]
name = "plain_bitnames_types"
path = "lib.rs"
